--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,14 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching and mentorship"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## University of California, Berkeley 
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+### Undergraduate Research Apprentice Program (2023-2024)
+
+### Econ 141: Econometric Analysis (Fall 2021)
+Graduate Student Instructor for Demian Pouzo, Economics Department, UC Berkeley.
+
